# Graphizer

./: CMakeLists.txt  LICENSE  readme.md
include/: DSU.h  Driver.h  Graph.h  utils.h
resources/qml/: Board.qml  TextButton.qml  main.qml  qml.qrc
src/: Driver.cpp  Graph.cpp  main.cpp
